# json-formatter

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: JsonEditor.css  JsonEditor.tsx
src/utils/: JsonUtils.ts
